Fix horizontal scrollbar being seen

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,7 +13,7 @@ html {
 
 body {
   margin: 0;
-  overflow: auto;
+  overflow-x: hidden;
 }
 
 p {
